# ubongosolve

./: .gitignore  LICENSE  README.md  pyproject.toml  ubongosolve.py
app/: README.md  main.py  requirements.txt
app/static/: style.css
app/templates/: index.html  result.html
