[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ubongosolve"
version = "0.1.0"
description = "Solve ubongo puzzle by constraint programming"
authors = [
    {name = "Kota Mori", email = "kmori05@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "ortools",
]

[dependency-groups]
dev = [
    "jupyter",
    "pytest",
    "twine>=6.2.0",
    "wheel>=0.46.3",
]

[tool.setuptools]
py-modules = ["ubongosolve"]
